// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and upgrade Azure workloads between plans, tiers, or SKUs, or modernize Azure SDK dependencies in source code. WHEN: upgrade Consumption to Flex Consumption, upgrade Azure Functions plan, migrate hosting plan, change hosting plan, function app SKU, migrate App Service to Container Apps, migrate legacy Azure SDKs for Java, upgrade legacy Azure Java SDK, com.microsoft.azure to com.azure.",
  "extractedKeywords": [
    "app service",
    "apps",
    "assess",
    "azure",
    "between",
    "change",
    "code",
    "consumption",
    "container",
    "dependencies",
    "deploy",
    "flex",
    "function",
    "functions",
    "hosting",
    "java",
    "legacy",
    "mcp",
    "microsoft",
    "migrate",
    "modernize",
    "monitor",
    "plan",
    "plans",
    "sdks",
    "service",
    "skus",
    "source",
    "tiers",
    "upgrade",
    "validation",
    "when",
    "workloads",
  ],
  "name": "azure-upgrade",
}
`;

exports[`azure-upgrade - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "apps",
  "assess",
  "azure",
  "between",
  "change",
  "code",
  "consumption",
  "container",
  "dependencies",
  "deploy",
  "flex",
  "function",
  "functions",
  "hosting",
  "java",
  "legacy",
  "mcp",
  "microsoft",
  "migrate",
  "modernize",
  "monitor",
  "plan",
  "plans",
  "sdks",
  "service",
  "skus",
  "source",
  "tiers",
  "upgrade",
  "validation",
  "when",
  "workloads",
]
`;
